# kassensystem

./: README.md  interfaces.md  use-cases.md
ArduinoIDE_libraries/: README.md
ArduinoIDE_libraries/RAK14014-FT6336U/: README.md
ArduinoIDE_libraries/RFID_MFRC522v2/src/: MFRC522Debug.cpp
platine/: fp-info-cache  fp-lib-table  rfid.pcb.kicad_pcb  rfid.pcb.kicad_prl  rfid.pcb.kicad_pro  rfid.pcb.kicad_sch  sym-lib-table
platine/ESP32-C3_SUPERMINI/: ESP32-C3_SUPERMINI.kicad_sym  MODULE_ESP32-C3_SUPERMINI.kicad_mod
platine/pcbway_production/2024-11-22-12-16-23/: rfid.pcb.kicad_pcb_bom.csv  rfid.pcb.kicad_pcb_netlist.ipc  rfid.pcb.kicad_pcb_positions.csv
rfidReader_ArduinoIDE/rfidReader/: README.md  display.ino  jsonaction.ino  netcred.h  pinoutdef.h  rfidReader.ino  solenoid.ino  support.ino  time.ino  touch.ino  ver.h  wifi.ino
schaffbar-backend/: .gitignore
schaffbar-backend/core-pos/: lombok.config  pom.xml
schaffbar-backend/core-pos/data/: users.sql
schaffbar-portal/: .prettierignore  .prettierrc  README.md  angular.json  eslint.config.js  package-lock.json  package.json
schaffbar-portal/src/: index.html  styles.scss
schaffbar-portal/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
timeMachine/: app.py
timemachine/: .dockerignore  Dockerfile  Dockerfile.admin  Dockerfile.timemachine  README.md  TODO.md  app.py  compose.yml  messages.py  models.py  pyproject.toml  shell.nix  util.py
timemachine/templates/: base.html  checkout.html  forms.py  index.html  lookup.html  register.html
(+157 files in other folders)
